fixes to projects sizing affecting borders on smaller screens

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -146,8 +146,8 @@ article {
 
 img {
     display: block;
-    height: 180px;
-    width: 250px;
+    height: 150px;
+    width: 200px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
